feat(epic-13): migrate Java estate to Spring Boot 4.0.7 (#797)
* refactor(epic-13): zero-deprecation baseline + SB4 compatibility matrix (Story 13-1)

Spring Boot 4 migration prep — clears every Java deprecation warning across all
7 modules on 3.5.7 BEFORE the framework jump (SB4 removes ~88% of 3.x deprecations).

- build.gradle: enable -Xlint:deprecation estate-wide; -PfailOnDeprecation adds
  -Werror as the enforcement gate
- 27 deprecation sites fixed across 9 categories:
  - UriComponentsBuilder.fromHttpUrl -> fromUriString (gateway, partner clients)
  - new URL(String) -> URI.create(s).toURL() (test fixtures); SuppressWarnings on
    the one main-source lenient-parse case (SessionMaterialsService)
  - @MockBean/@SpyBean -> @MockitoBean/@MockitoSpyBean (removed in SB4)
  - SXSSFWorkbook.dispose() removed (redundant under try-with-resources close())
  - @Builder.Default on SpeakerPool.status / remindersDisabled
  - XmlCursor.dispose() -> close()
  - AuthorizationManager.check() -> authorize() (SS7-ready; check() delegate kept
    for SS6, deleted in 13-3)
  - @Mock(lenient=true) -> @Mock(strictness=LENIENT)
  - SuppressWarnings on intentional legacy getPdf() read (Story 5.9 back-compat)
- docs/plans/spring-boot-4-migration.md: append 13-1 deliverables — deprecation
  inventory, third-party SB4 compatibility matrix, Flyway/lombok tidy-ups,
  OpenRewrite dry-run deferral (tooling version-alignment owned by 13-2)

Validated: -Werror gate passes; 280 targeted tests green (gateway 7, EMS 184,
CUMS 80, partner 9) covering every behaviour-sensitive change. No business-logic
change. OpenRewrite sizing folded into 13-2 (plugin/recipe-BOM version mismatch).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* docs(epic-13): record 13-2 binary-compat constraint + SB4 target version [no-doc]

shared-kernel is a compile-time project() dependency bundled into every service's
bootJar, not just a wire contract. Audited its 59 classes: the SB4 migration of
sh